final pre-fight state stuff

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <script src="js/phaser.min.js"></script>
   <script src="js/game.js"></script>
   <script src="js/classes.js"></script>
-  <script src="js/boot.js"></script>
   <script src="js/menu.js"></script>
   <script src="js/play.js"></script>
+  <script src="js/fight.js"></script>
 </head>
 <body>
 
