Initial UI Overlay

--- a/index.html
+++ b/index.html
@@ -18,8 +18,30 @@
 </head>
 <body>
 
-  <div id="gameContainer">
+  <div class="container">
+    <div id="gameContainer">
 
+    </div>
+    
+    <div id="ui">
+      <ul>
+        <li>
+          <p>Health: <em id="hpDisp">N/A</em></p>
+        </li>
+        <li>
+          <p>Strength: <em id="strDisp">None</em></p>
+        </li>
+        <li>
+          <p>Agility: <em id="agiDisp">33.3</em></p>
+        </li>
+        <li>
+          <p>Magic: <em id="magDisp">1.5 Wizards</em></p>
+        </li>
+        <li>
+          <a href="javascript:void(0);">Inventory: <em id="itemDisp">Some Cheese</em></a>
+        </li>
+      </ul>
+    </div>
   </div>
 
 </body>
