--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
     <div id="ui">
       <ul>
         <li>
-          <p>Health: <em id="hpDisp">N/A</em></p>
+          <p>Health: <em id="hpDisp">0</em></p>
         </li>
         <li>
-          <p>Strength: <em id="strDisp">None</em></p>
+          <p>Mana: <em id="mpDisp">0</em></p>
         </li>
         <li>
-          <p>Agility: <em id="agiDisp">33.3</em></p>
+          <p>Strength: <em id="strDisp">0</em></p>
         </li>
         <li>
-          <p>Magic: <em id="magDisp">1.5 Wizards</em></p>
+          <p>Agility: <em id="agiDisp">0</em></p>
         </li>
         <li>
-          <a href="javascript:void(0);">Inventory: <em id="itemDisp">Some Cheese</em></a>
+          <p>Magic: <em id="magDisp">0</em></p>
         </li>
       </ul>
     </div>
