partial implementation of item & inventory
removed sfx for now

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="js/menu.js"></script>
   <script src="js/play.js"></script>
   <script src="js/fight.js"></script>
+  <script src="js/itemtest.js"></script>
 </head>
 <body>
 
