inventory interface mostly done

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
           <p>Mana: <em id="mpDisp">0</em></p>
         </li>
         <li>
+          <p>Armour: <em id="armDisp">0</em></p>
+        </li>
+        <li>
           <p>Strength: <em id="strDisp">0</em></p>
         </li>
         <li>
